Project

General

Profile

Actions

Bug #24601

closed

FAILED assert(is_up(osd)) in OSDMap::get_inst(int)

Added by Neha Ojha almost 6 years ago. Updated about 5 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
luminous,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

2018-06-20T05:06:34.620 INFO:tasks.ceph.osd.4.smithi185.stderr:/home/jenkins-build/build/workspace/ceph-dev-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/13.2.0-78-g2dbf090/rpm/el7/BUILD/ceph-13.2.0-78-g2dbf090/src/osd/OSDMap.h: In function 'entity_inst_t OSDMap::get_inst(int) const' thread 7f4f41020700 time 2018-06-20 05:06:34.638269
2018-06-20T05:06:34.620 INFO:tasks.ceph.osd.4.smithi185.stderr:/home/jenkins-build/build/workspace/ceph-dev-build/ARCH/x86_64/AVAILABLE_ARCH/x86_64/AVAILABLE_DIST/centos7/DIST/centos7/MACHINE_SIZE/huge/release/13.2.0-78-g2dbf090/rpm/el7/BUILD/ceph-13.2.0-78-g2dbf090/src/osd/OSDMap.h: 916: FAILED assert(is_up(osd))
2018-06-20T05:06:34.620 INFO:tasks.ceph.osd.4.smithi185.stderr: ceph version 13.2.0-78-g2dbf090 (2dbf090c1db9bc778d17fdfddd5d18ff9976b25a) mimic (stable)
2018-06-20T05:06:34.621 INFO:tasks.ceph.osd.4.smithi185.stderr: 1: (ceph::__ceph_assert_fail(char const*, char const*, int, char const*)+0xff) [0x7f4f6697f53f]
2018-06-20T05:06:34.621 INFO:tasks.ceph.osd.4.smithi185.stderr: 2: (()+0x286727) [0x7f4f6697f727]
2018-06-20T05:06:34.621 INFO:tasks.ceph.osd.4.smithi185.stderr: 3: (Objecter::_reopen_session(Objecter::OSDSession*)+0x4b) [0x55e7cded545b]
2018-06-20T05:06:34.621 INFO:tasks.ceph.osd.4.smithi185.stderr: 4: (Objecter::ms_handle_reset(Connection*)+0x229) [0x55e7cdef1da9]
2018-06-20T05:06:34.622 INFO:tasks.ceph.osd.4.smithi185.stderr: 5: (DispatchQueue::entry()+0x366) [0x7f4f669f4f56]
2018-06-20T05:06:34.622 INFO:tasks.ceph.osd.4.smithi185.stderr: 6: (DispatchQueue::DispatchThread::entry()+0xd) [0x7f4f66a95f2d]
2018-06-20T05:06:34.622 INFO:tasks.ceph.osd.4.smithi185.stderr: 7: (()+0x7e25) [0x7f4f634d7e25]
2018-06-20T05:06:34.623 INFO:tasks.ceph.osd.4.smithi185.stderr: 8: (clone()+0x6d) [0x7f4f625c7bad]
2018-06-20T05:06:34.630 INFO:tasks.ceph.osd.4.smithi185.stderr: NOTE: a copy of the executable, or `objdump -rdS <executable>` is needed to interpret this.

http://pulpito.ceph.com/teuthology-2018-06-20_02:30:02-rados-mimic-distro-basic-smithi/2683214/


Related issues 2 (0 open2 closed)

Copied to RADOS - Backport #37832: mimic: FAILED assert(is_up(osd)) in OSDMap::get_inst(int)ResolvedAshish SinghActions
Copied to RADOS - Backport #37833: luminous: FAILED assert(is_up(osd)) in OSDMap::get_inst(int)ResolvedAshish SinghActions
Actions #2

Updated by Kefu Chai over 5 years ago

  • Status changed from New to Pending Backport
  • Backport set to luminous,mimic
Actions #3

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37832: mimic: FAILED assert(is_up(osd)) in OSDMap::get_inst(int) added
Actions #4

Updated by Nathan Cutler over 5 years ago

  • Copied to Backport #37833: luminous: FAILED assert(is_up(osd)) in OSDMap::get_inst(int) added
Actions #5

Updated by Nathan Cutler over 5 years ago

  • Subject changed from mimic: FAILED assert(is_up(osd)) in OSDMap::get_inst(int) to FAILED assert(is_up(osd)) in OSDMap::get_inst(int)
  • Pull request ID set to 25437
Actions #6

Updated by Nathan Cutler about 5 years ago

  • Status changed from Pending Backport to Resolved
Actions

Also available in: Atom PDF